create java package file with jpackage